@@ -481,7 +481,8 @@ enum DeathState
     JUST_DIED      = 1,
     CORPSE         = 2,
     DEAD           = 3,
-    JUST_RESPAWNED = 4
+    JUST_RESPAWNED = 4,
+    GHOULED        = 5 //Raise ally, Deathknight's spell
 };
 
 enum UnitState
